Modify all ProductTests not to use Mockito Modify all test classes to save and backup data BeforeAll and AfterAll instead of BeforeEAch and AfterEach Fix a few tests in OrderServiceTest and CartServiceTest that were broken by the previous change Modify getProductById to match getUserById