@@ -5,13 +5,10 @@ import com.example.model.Product;
 import com.example.model.User;
 import com.example.repository.CartRepository;
 import com.example.service.CartService;
-import com.example.service.UserService;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import com.example.service.ProductService;
+import org.junit.jupiter.api.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.context.annotation.ComponentScan;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -20,6 +17,7 @@ import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
 @SpringBootTest
 class CartServiceTest {
     @Autowired
@@ -28,14 +26,16 @@ class CartServiceTest {
     private ArrayList<Cart> cartsJSON;
     @Autowired
     private CartRepository cartRepository;
+    @Autowired
+    private ProductService productService;
 
-    @BeforeEach
+    @BeforeAll
     void backupData() {
         cartsJSON = new ArrayList<>(cartService.getCarts());
         cartRepository.saveAll(new ArrayList<>());
     }
 
-    @AfterEach
+    @AfterAll
     void restoreData() {
         cartRepository.saveAll(cartsJSON);
     }
@@ -88,6 +88,9 @@ class CartServiceTest {
 
     @Test
     void getCarts_shouldReturnEmptyList_whenNoCarts() {
+
+        cartRepository.clearAll();
+
         ArrayList<Cart> carts = cartService.getCarts();
 
         assertTrue(carts.isEmpty(), "Cart should be empty");
@@ -95,6 +98,9 @@ class CartServiceTest {
 
     @Test
     void getCarts_shouldReturnSameCarts() {
+
+        cartRepository.clearAll();
+
         User user = new User("Tamer");
         Cart cart = new Cart(user.getId());
 
@@ -103,7 +109,7 @@ class CartServiceTest {
         List<Cart> carts = cartService.getCarts();
 
         assertEquals(1, carts.size(), "Cart should be same as original cart");
-        assertEquals(cart, carts.get(0));
+        assertTrue(carts.contains(cart), "Cart should be same as original cart");
     }
 
     @Test
@@ -116,7 +122,7 @@ class CartServiceTest {
 
         List<Cart> carts = cartService.getCarts();
 
-        assertTrue(carts.isEmpty(), "Cart should be empty");
+        assertFalse(carts.contains(cart));
     }
 
     @Test
@@ -188,12 +194,16 @@ class CartServiceTest {
         User user = new User("OT");
         Cart cart = new Cart(user.getId());
 
-        List<Product> products = new ArrayList<>();
-        products.add(new Product("Laptop", 999.99));
-        products.add(new Product("Mouse", 29.99));
-        cart.setProducts(products);
+        Product laptop = new Product("Laptop", 999.99);
+        Product mouse = new Product("Mouse", 29.99);
 
-        Cart savedCart = cartService.addCart(cart);
+        productService.addProduct(laptop);
+        productService.addProduct(mouse);
+
+        cartService.addCart(cart);
+
+        cartService.addProductToCart(cart.getId(), laptop);
+        cartService.addProductToCart(cart.getId(), mouse);
 
         Cart result = cartService.getCartByUserId(user.getId());
 
@@ -215,9 +225,7 @@ class CartServiceTest {
 
         UUID nonExistentCartId = UUID.randomUUID();
 
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
-            cartService.addProductToCart(nonExistentCartId, product);
-        });
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> cartService.addProductToCart(nonExistentCartId, product));
 
         String expectedMessage = "Cart with ID " + nonExistentCartId + " not found";
         String actualMessage = exception.getMessage();
@@ -260,9 +268,7 @@ class CartServiceTest {
 
         cartService.addProductToCart(cart.getId(), product);
 
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
-            cartService.addProductToCart(cart.getId(), product);
-        });
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> cartService.addProductToCart(cart.getId(), product));
 
         String expectedMessage = "Product with ID " + product.getId() + " already exists in cart";
         String actualMessage = exception.getMessage();
@@ -280,9 +286,7 @@ class CartServiceTest {
         UUID nonExistentCartId = UUID.randomUUID();
         Product product = new Product("Smartwatch", 149.99);
 
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
-            cartService.deleteProductFromCart(nonExistentCartId, product);
-        });
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> cartService.deleteProductFromCart(nonExistentCartId, product));
 
         String expectedMessage = "Cart with ID " + nonExistentCartId + " not found";
         String actualMessage = exception.getMessage();
@@ -311,7 +315,7 @@ class CartServiceTest {
 
         assertEquals(1, updatedCart.getProducts().size(), "Cart should have 1 product after deletion");
 
-        Product remainingProduct = updatedCart.getProducts().get(0);
+        Product remainingProduct = updatedCart.getProducts().getFirst();
         assertEquals(product2.getId(), remainingProduct.getId(), "The remaining product should be the one not deleted");
         assertEquals("Mouse", remainingProduct.getName(), "The remaining product should have the correct name");
         assertEquals(29.99, remainingProduct.getPrice(), 0.001, "The remaining product should have the correct price");
@@ -328,9 +332,7 @@ class CartServiceTest {
 
         cartService.addProductToCart(cart.getId(), existingProduct);
 
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
-            cartService.deleteProductFromCart(cart.getId(), nonExistentProduct);
-        });
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> cartService.deleteProductFromCart(cart.getId(), nonExistentProduct));
 
         String expectedMessage = "Product with ID " + nonExistentProduct.getId() + " not found in cart";
         String actualMessage = exception.getMessage();
@@ -341,7 +343,7 @@ class CartServiceTest {
         Cart updatedCart = cartService.getCartById(cart.getId());
         assertEquals(1, updatedCart.getProducts().size(),
                 "Cart should still contain the original product");
-        assertEquals(existingProduct.getId(), updatedCart.getProducts().get(0).getId(),
+        assertEquals(existingProduct.getId(), updatedCart.getProducts().getFirst().getId(),
                 "Cart should still contain the original product with the same ID");
     }
 
@@ -349,9 +351,7 @@ class CartServiceTest {
     void deleteCartById_whenCartDoesNotExist_shouldThrowError() {
         UUID nonExistentCartId = UUID.randomUUID();
 
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
-            cartService.deleteCartById(nonExistentCartId);
-        });
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> cartService.deleteCartById(nonExistentCartId));
 
         String expectedMessage = "Cart with ID " + nonExistentCartId + " not found";
         String actualMessage = exception.getMessage();
@@ -377,6 +377,9 @@ class CartServiceTest {
 
     @Test
     void deleteCartById_withMultipleCarts_shouldOnlyDeleteTargetCart() {
+
+        int initialCartCount = cartService.getCarts().size();
+
         User user1 = new User("Omar");
         User user2 = new User("Tamer");
         User user3 = new User("Abdelaty");
@@ -393,14 +396,15 @@ class CartServiceTest {
         UUID cart2Id = savedCart2.getId();
         UUID cart3Id = savedCart3.getId();
 
-        int initialCartCount = cartService.getCarts().size();
-        assertEquals(3, initialCartCount, "Should have 3 carts initially");
+        int cartCount = cartService.getCarts().size();
+
+        assertEquals(initialCartCount + 3, cartCount, "Should have 3 carts initially");
 
         cartService.deleteCartById(cart2Id);
 
         ArrayList<Cart> remainingCarts = cartService.getCarts();
 
-        assertEquals(initialCartCount - 1, remainingCarts.size(),
+        assertEquals(initialCartCount + 3 - 1, remainingCarts.size(),
                 "Cart count should decrease by exactly 1");
 
         boolean cart1Exists = remainingCarts.stream()
@@ -414,5 +418,4 @@ class CartServiceTest {
         assertFalse(cart2Exists, "Second cart should be deleted");
         assertTrue(cart3Exists, "Third cart should still exist");
     }
-
 }
